--- a/package.json
+++ b/package.json
@@ -2,7 +2,16 @@
   "name": "product_hunt_clone_with_react",
   "private": true,
   "dependencies": {
+    "@rails/webpacker": "^3.2.0",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "3",
-    "jquery": "^3.2.1"
+    "coffeescript": "1.12.7",
+    "jquery": "^3.2.1",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^2.10.1"
   }
 }
